--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Created for the Thinkful EI Program.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,18 @@
   "bugs": {
     "url": "https://github.com/thinkful-ei-heron/api-day-julio/issues"
   },
-  "homepage": "https://github.com/thinkful-ei-heron/api-day-julio#readme"
+  "homepage": "https://github.com/thinkful-ei-heron/api-day-julio#readme",
+  "dependencies": {
+    "cuid": "^2.1.6",
+    "jquery": "^3.4.1"
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
+  }
 }
